try again to fix manifest

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,6 @@
   "permissions": [
     "activeTab",
     "storage",
-    "scripting",
     "contextMenus"
   ],
   
@@ -36,7 +35,8 @@
   ],
   
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js"],
+    "persistent": false
   },
   
   "icons": {
